samples/_failures_safe/1761417350_470e0c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ec14b93e.c: In function ‘main’:
./samples/SAFE/__tmp_ec14b93e.c:166:16: error: expected ‘)’ at end of input
  166 |     add_edge(&g
      |             ~  ^
      |                )
./samples/SAFE/__tmp_ec14b93e.c:166:5: error: too few arguments to function ‘add_edge’
  166 |     add_edge(&g
      |     ^~~~~~~~
./samples/SAFE/__tmp_ec14b93e.c:97:5: note: declared here
   97 | int add_edge(struct Graph* g, int from_id, int to_id, int weight) {
      |     ^~~~~~~~
./samples/SAFE/__tmp_ec14b93e.c:166:5: error: expected declaration or statement at end of input
  166 |     add_edge(&g
      |     ^~~~~~~~
